--- a/app/src/main/res/layout/fragment_list_man.xml
+++ b/app/src/main/res/layout/fragment_list_man.xml
@@ -7,4 +7,8 @@
     android:focusable="true"
     android:orientation="vertical">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_mans"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
