Added icon in item RecyclerView

--- a/app/src/main/res/layout/model_man_for_list.xml
+++ b/app/src/main/res/layout/model_man_for_list.xml
@@ -2,7 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/civ_icon_man"
+        android:layout_width="48dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/tv_full_name"
