Added new images

--- a/app/src/main/res/layout/fragment_card_man.xml
+++ b/app/src/main/res/layout/fragment_card_man.xml
@@ -113,7 +113,7 @@
             android:layout_gravity="right"
             android:layout_marginBottom="32dp"
             android:gravity="center"
-            android:text="@string/edit"
+            android:text="@string/save"
             tools:ignore="RtlHardcoded" />
     </LinearLayout>
 </ScrollView>
