--- a/app/src/main/res/layout/fragment_list_man.xml
+++ b/app/src/main/res/layout/fragment_list_man.xml
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_margin="32dp"
-            android:src="@drawable/ic_launcher"
+            android:src="@drawable/ic_add"
             tools:ignore="RtlHardcoded" />
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
