--- a/app/src/main/res/layout/fragment_card_man.xml
+++ b/app/src/main/res/layout/fragment_card_man.xml
@@ -15,10 +15,10 @@
         <ImageView
             android:id="@+id/iv_icon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="128dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="32dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/ic_profile" />
 
         <TextView
             android:layout_width="match_parent"
@@ -107,7 +107,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button_edit"
+            android:id="@+id/button_add_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
