--- a/app/src/main/res/layout/fragment_card_man.xml
+++ b/app/src/main/res/layout/fragment_card_man.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,8 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
+        android:layout_marginHorizontal="32dp"
         android:orientation="vertical">
 
         <ImageView
@@ -91,15 +90,14 @@
                 android:focusable="false"
                 android:hint="@string/user_card_date_of_birth" />
         </android.support.design.widget.TextInputLayout>
-
-        <Button
-            android:id="@+id/button_add_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginBottom="32dp"
-            android:gravity="center"
-            android:text="@string/save"
-            tools:ignore="RtlHardcoded" />
     </LinearLayout>
-</ScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="32dp"
+        android:src="@drawable/ic_add"
+        tools:ignore="RtlHardcoded" />
+</android.support.design.widget.CoordinatorLayout>
